# tymemud-parent

./: .gitignore  AGENTS.md  Combat_Channeling_Design_Notes  README.md  add_all_agents_to_grepai.sh  check_zones.c  checkgit.sh  comprehensive_test.py  comprehensive_test_fixed.py  debug_1204.py  debug_connection.py  debug_detailed.py  debug_full.py  debug_phase3.py  debug_raw.py  debug_room_parse.py  debug_step.py  debug_trace.py  debug_tx.py  debug_tx2.py  debug_validate.py  debug_zone.c  fix_broken_git_repos.sh  fix_remaining_broken_git_repos.sh  fixgit.sh  list_uncommited_git_repos.sh  llm_gateway  make_agent_workspace.sh  opencode-supervisor.sh  opencode.json  opencode.json.disabled  quick_test.py  run_mcp_test.py  show_raw_rooms.py  test_all_tools.py  test_auth.py  test_builder_detailed.py  test_builder_port.py  test_client.py  test_correct.py  (+22 more)
Agent_Transcripts/: cursor_documenting_mikkimud_codebase_fu.md  cursor_mud_character_stats_and_training.md  cursor_olc_save_git_commit_and_push_enh.md  cursor_ubermap_bespoke_payloads_and_zon.md  cursor_ubermap_bespoke_payloads_and_zon2.md  cursor_ubermap_bespoke_payloads_and_zon3.md  cursor_ubermap_overland_zones_audit.md  (+2 more)
docs/: plans  (+6 more)
llm_gateway/: .gitignore  README.md  __init__.py  client.py  debug_conn.py  pyproject.toml  server.py  show_raw_data.py  test_all_tools.py  test_client.py  test_client_tx.py  test_debug.py  test_debug_client.py  test_deep.py  test_real.py  test_seq.py  test_simple.py  test_trace.py  test_tx.py  test_tx2.py  test_tx_debug.py  test_tx_wldlist.py  test_wlddump.py  test_wldlist.py  test_zone.py
(+232 files in other folders)
